<resources>
    <string name="app_name">Expense Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="insert_transaction">Insert Transactions</string>
    <string name="accounts">Accounts</string>
    <string name="charts">Charts</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="circle_letter_icon">circleLetterIcon</string>

    <string name="waiting">Please Wait...</string>
    <string name="empty">No Transactions yet!</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="expense_or_income">Expense or Income</string>
    <string name="select_account">Type Account</string>
    <string name="select_category">Type Category</string>
    <string name="type_amount">Type Amount</string>
    <string name="account_not_correct">Account is not valis</string>
    <string name="category_not_correct">Category is not valid</string>
    <string name="amount_not_correct">Amount is not correct</string>
    <string name="error_expense_negative_number">Negative number required with \"Expense\"</string>
    <string name="error_expense_positive_number">Positive number required with \"Income\"</string>
    <string name="save">Save</string>
</resources>
